--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,16 @@
-html {
+/** html {
 	min-height: 100%;
 	position: relative;
-}
+} */
 
-footer {
+/** footer {
 	position: absolute;
   	bottom: 0;
   	width: 100%;
   	height: 60px; /* Set the fixed height of the footer here */
-  	line-height: 60px; /* Vertically center the text there */
-  	background-color: #f5f5f5;
-}
+  	/** line-height: 60px; /* Vertically center the text there */
+  	/** background-color: #f5f5f5;
+} */
 
 body {
 	background: #f2f5f7!important;
