--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,16 @@ main > .container {
 	background: white;
 }
 
+header > .container {
+	border-top: 5px solid #1a1a1a;
+	padding-top: 5px;
+}
+
+footer > .container {
+	border-bottom: 5px solid #aaa;
+	padding-bottom: 5px;
+}
+
 .navbar-brand img {
 	max-width: 300px;
 }
