--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,9 +23,6 @@ p {
 .navbar {
   padding: 0; }
 
-.navbar-brand img {
-  max-width: 800px; }
-
 .dino-table table a {
   text-decoration: none;
   color: #e8e5d4; }
@@ -55,3 +52,6 @@ p {
 #headNav {
   font-size: 1.3em !important;
   font-weight: 900; }
+
+#dinoHead img {
+  max-width: 800px; }
